@@ -10,11 +10,14 @@
  * and license in png.h
  */
 
-/* This is required to get the symbol renames, which are #defines */
+/* This is required to get the symbol renames, which are #defines, and also
+ * includes the value of PNG_FILTER_OPTIMIZATIONS.
+ */
 #define PNG_VERSION_INFO_ONLY
 #include "../pngpriv.h"
 
-#ifdef __arm__
+#if defined(PNG_FILTER_OPTIMIZATIONS) && defined(__arm__) && \
+   defined(__ARM_NEON__)
 #if defined(__linux__) && defined(__ELF__)
 .section .note.GNU-stack,"",%progbits /* mark stack as non-executable */
 #endif
@@ -229,4 +232,4 @@ func    png_read_filter_row_paeth3_neon, export=1
 
         pop             {r4,pc}
 endfunc
-#endif
+#endif /* FILTER_OPTIMIZATIONS && __arm__ && __ARM_NEON__ */
